# trackSabha

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
script/: 02_transcript_to_mongo_uploder.py
scripts/: 01_fetch_yt_transcript.py  02_transcript_to_mongo_uploder.py  03_transcript_clean_from_mongo.py  04_knowledge_graph_generator.py  05_backfill_embeddings.py  05_graph_loader.py  06_demo_query.py
webapp/: app.py  chatbot.py  jansetu.py  prompt.md  requirements.txt  session_manager.py
webapp/static/: app.js  styles.css
webapp/templates/: graph_visualization.html  index.html
