[project]
name = "tracksabha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apify-client>=1.12.2",
    "google-genai>=1.48.0",
    "langchain>=1.0.3",
    "langchain-google-genai>=3.0.0",
    "pymongo>=4.14.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "rdflib>=7.4.0",
    "requests>=2.32.4",
]
